Browse all upcoming events, get events details, RSVP & cancel RSVP