@@ -1,6 +1,5 @@
-package com.example.campuspulseai.service.impl;
+package com.example.campuspulseai.service.Impl;
 
-import com.example.campuspulseai.common.exception.ResourceNotFoundException;
 import com.example.campuspulseai.common.util.IAuthUtils;
 import com.example.campuspulseai.domain.dto.request.CreateEventRequest;
 import com.example.campuspulseai.domain.dto.request.EditEventRequest;
@@ -8,22 +7,20 @@ import com.example.campuspulseai.domain.dto.response.CreateEventResponse;
 import com.example.campuspulseai.domain.dto.response.GetEventResponse;
 import com.example.campuspulseai.service.IEventService;
 import com.example.campuspulseai.southbound.entity.*;
+import com.example.campuspulseai.southbound.repository.*;
+
 import com.example.campuspulseai.southbound.mapper.EventMapper;
-import com.example.campuspulseai.southbound.repository.IClubRepository;
-import com.example.campuspulseai.southbound.repository.IEventRepository;
-import com.example.campuspulseai.southbound.repository.IUserEventRepository;
-import com.example.campuspulseai.southbound.repository.IUserRepository;
-import com.example.campuspulseai.southbound.specification.IEventSpecifications;
+import com.example.campuspulseai.southbound.specification.impl.EventSpecifications;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
-import org.springframework.http.HttpStatus;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
-import org.springframework.web.server.ResponseStatusException;
 
+import java.nio.file.AccessDeniedException;
 import java.time.LocalDateTime;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
@@ -36,27 +33,27 @@ public class EventServiceImpl implements IEventService {
     private final IEventRepository eventRepository;
     private final IUserRepository userRepository;
     private final IUserEventRepository userEventRepository;
-    private final EventMapper eventMapper;
     private final IClubRepository clubRepository;
-    private final IEventSpecifications eventSpecifications;
+    private final EventMapper eventMapper;
+    private final EventSpecifications eventSpecifications;
 
     @Override
-    public CreateEventResponse createEvent(CreateEventRequest createEventRequest) throws Exception {
+    public CreateEventResponse createEvent(CreateEventRequest createEventRequest) throws AccessDeniedException {
         User user = authUtils.getAuthenticatedUser();
-        Event event = eventMapper.mapToClub(createEventRequest);
-        Club club = getCluByOwnerId(user.getId());
+        Event event = eventMapper.mapToEvent(createEventRequest);
+        Club club = clubRepository.findByOwnerId(user.getId())
+                .orElseThrow(() -> new RuntimeException("Club not found for user"));
         event.setClub(club);
         Event createdEvent = eventRepository.save(event);
         return eventMapper.mapToCreateEventResponse(createdEvent);
     }
 
-
     @Override
-    public CreateEventResponse updateEvent(Long id, EditEventRequest editEventRequest) throws Exception {
+    public CreateEventResponse updateEvent(Long id, EditEventRequest editEventRequest) throws AccessDeniedException {
         Event event = getEventFromDBById(id);
         Club club = clubRepository.getById(event.getClub().getId());
         User user = authUtils.getAuthenticatedUser();
-        validateUserClubownership(user, club);
+        validateUserClubOwnership(user, club);
         validateEventTime(event);
         eventMapper.mapToEventForEdit(editEventRequest, event);
         Event updatedEvent = eventRepository.save(event);
@@ -65,36 +62,19 @@ public class EventServiceImpl implements IEventService {
 
     @Override
     public CreateEventResponse getEventById(Long id) {
-        return null;
+        Event event = getEventFromDBById(id);
+        return eventMapper.mapToCreateEventResponse(event);
     }
 
     @Override
-    public void deleteEventById(Long id) throws Exception {
+    public void deleteEventById(Long id) throws AccessDeniedException {
         Event event = getEventFromDBById(id);
         Club club = clubRepository.getById(event.getClub().getId());
         User user = authUtils.getAuthenticatedUser();
-        validateUserClubownership(user, club);
+        validateUserClubOwnership(user, club);
         validateEventTime(event);
         event.setIsActive(false);
         eventRepository.save(event);
-    }
-
-    @Override
-    public List<GetEventResponse> suggestEventsToAttend() {
-        return List.of();
-    }
-
-    @Override
-    public List<GetEventResponse> suggestEventsToCreate() {
-        return List.of();
-    }
-
-
-    //Retrieves a list of events that the current user has RSVP’d for
-    @Override
-    public List<GetEventResponse> getEventsAttending() {
-        User currentUser = getCurrentUser();
-        return List.of();
     }
 
     @Override
@@ -110,9 +90,24 @@ public class EventServiceImpl implements IEventService {
     }
 
     @Override
+    public List<GetEventResponse> suggestEventsToAttend() {
+        return List.of();
+    }
+
+    @Override
+    public List<GetEventResponse> suggestEventsToCreate() {
+        return List.of();
+    }
+
+    @Override
+    public List<GetEventResponse> getEventsAttending() {
+        return List.of();
+    }
+
+    @Override
     public List<GetEventResponse> getAllEventsForCurrentUser() {
-        User currentUser = getCurrentUser();
-        List<UserEvent> userEvents = userEventRepository.findByUserId(currentUser.getId());
+        User dummyUser = getDummyUser();
+        List<UserEvent> userEvents = userEventRepository.findByUserId(dummyUser.getId());
         return userEvents.stream()
                 .map(userEvent -> {
                     Event event = eventRepository.findById(userEvent.getEventId())
@@ -124,12 +119,11 @@ public class EventServiceImpl implements IEventService {
                             event.getStartDate()
                     );
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void attendEvent(Long eventId) {
-        //User currentUser = getCurrentUser();
         User dummyUser = getDummyUser();
         Event event = eventRepository.findById(eventId)
                 .orElseThrow(() -> new RuntimeException("Event not found with id: " + eventId));
@@ -137,21 +131,17 @@ public class EventServiceImpl implements IEventService {
         UserEvent userEvent = new UserEvent();
         userEvent.setUserId(dummyUser.getId());
         userEvent.setEventId(eventId);
-        //userEvent.setUser(currentUser);
         userEvent.setUser(dummyUser);
         userEvent.setEvent(event);
         userEvent.setRsvpDateTime(LocalDateTime.now());
-
         userEventRepository.save(userEvent);
     }
 
     @Override
     public void unattendEvent(Long eventId) {
-        //User currentUser = getCurrentUser();
         User dummyUser = getDummyUser();
         UserEventId id = new UserEventId(dummyUser.getId(), eventId);
         userEventRepository.deleteById(id);
-
     }
 
     @Override
@@ -161,38 +151,32 @@ public class EventServiceImpl implements IEventService {
 
     @Override
     public List<GetEventResponse> getUpcomingEvents(LocalDateTime startDate, String category) {
-        LocalDateTime now = LocalDateTime.now(); // 06:34 PM EEST, August 12, 2025
-        LocalDateTime filterDate = (startDate != null) ? startDate : now;
+        ZonedDateTime now = ZonedDateTime.now(ZoneId.of("Europe/Helsinki"));
+        LocalDateTime filterDate = (startDate != null) ? startDate : now.toLocalDateTime();
 
-        List<Event> events = (category != null && !category.isEmpty()) ?
-                eventRepository.findByTimeDateAfterAndCategory(startDate, category) :
-                eventRepository.findByTimeDateAfterAndCategory(filterDate, category);
+        List<Event> events = (category != null && !category.isEmpty())
+                ? eventRepository.findByTimeDateAfterAndCategory(filterDate, category)
+                : eventRepository.findByTimeDateAfter(filterDate);
 
         return events.stream()
-                .filter(e -> e.getStartDate().isAfter(filterDate) && e.getStartDate() != null)
-                .map(eventMapper::mapToEventResponseDetails)
-                .collect(Collectors.toList());
+                .filter(e -> e.getStartDate() != null && e.getStartDate().isAfter(filterDate))
+                .map(e -> new GetEventResponse(
+                        e.getId(),
+                        e.getTitle(),
+                        e.getClub(),
+                        e.getDescription(),
+                        e.getStartDate()
+                ))
+                .toList();
     }
+
 
     @Override
     public GetEventResponse getEventDetails(Long id) {
-        Event event = eventRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id: " + id));
-        return eventMapper.mapToEventResponseDetails(event);
-
-    }
-
-
-    @Override
-    public User getCurrentUser() {
-        Object principal = org.springframework.security.core.context.SecurityContextHolder.getContext().getAuthentication().getPrincipal();
-        if (principal instanceof UserDetails) {
-            String email = ((UserDetails) principal).getUsername();
-            return userRepository.findByEmail(email)
-                    .orElseThrow(() -> new RuntimeException("User not found with email: " + email));
-        } else {
-            throw new RuntimeException("User not authenticated");
-        }
+        Event event = getEventFromDBById(id);
+        return new GetEventResponse(
+                event.getId(), event.getTitle(), event.getClub(), event.getDescription(), event.getStartDate()
+        );
     }
 
     @Override
@@ -201,26 +185,21 @@ public class EventServiceImpl implements IEventService {
                 .orElseThrow(() -> new RuntimeException("Dummy user not found"));
     }
 
-    private Club getCluByOwnerId(Long ownerId) {
-        return clubRepository.findByOwnerId(ownerId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.BAD_REQUEST, "User does not own a club"));
-    }
-
+    // Helper
     private Event getEventFromDBById(Long id) {
-        return eventRepository.findByIdAndIsActiveTrue(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Event not found with id: " + id));
+        return eventRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Event not found with id: " + id));
     }
 
-    private void validateUserClubownership(User user, Club club) {
-        if (!Objects.equals(user.getId(), club.getOwner().getId())) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "You are not authorized to update this event");
+    private void validateUserClubOwnership(User user, Club club) {
+        if (!Objects.equals(club.getOwner().getId(), user.getId())) {
+            throw new RuntimeException("User does not own this club");
         }
     }
 
     private void validateEventTime(Event event) {
-        if (event.getTimeDate().isBefore(LocalDateTime.now())) {
-            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Cannot edit an event that has already started");
+        if (event.getStartDate().isBefore(LocalDateTime.now())) {
+            throw new RuntimeException("Event start time cannot be in the past");
         }
     }
-
 }
